--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <title>Random Quote</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="quotes">
+            <p id="quote">Hello World</p>
+            <h3 id="author">Codefoxx</h3>
+        </div>
+    </div>
+    <div>
+        <button type="button" class="btn btn-info" onclick="generate()">Generate Quote</button>
+    </div>
+
 
 
     <script src="script.js"></script>
