--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h3 id="author">Codefoxx</h3>
         </div>
     </div>
-    <div>
+    <div style="text-align: center;">
         <button type="button" class="btn btn-info" onclick="generate()">Generate Quote</button>
     </div>
 
