--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
     <div class="container">
         <div class="quotes">
             <p id="quote">Hello World</p>
-            <h3 id="author">Codefoxx</h3>
+            <h3 id="author">Google</h3>
         </div>
     </div>
     <div style="text-align: center;">
-        <button type="button" class="btn btn-info" onclick="generate()">Generate Quote</button>
+        <button type="button" class="btn btn-primary" onclick="generate()">Generate quote</button>
     </div>
-
-
 
     <script src="script.js"></script>
 </body>
